--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -6,9 +6,9 @@
         <script src="//cdn.transifex.com/live.js"></script>
     </head>
     <body>
-      <div class="container black">
+      <div class="container white">
 
-        <h5 class="center white-text">
+        <h5 class="center black-text">
             Welcome! Click <a class="teal-text" href="{{url_for('static', filename='cf_')}}{{mode}}_{{role}}.html" target="_blank">here</a> to view the instructions again.
         </h5><br>
 
@@ -72,7 +72,7 @@
         </div>
 
           <div class="row center">
-              <h5 class="white-text" >Press {{ form.submit(class_="btn btn-primary") }} to enter the main chat page</h5>
+              <h5 class="black-text" >Press {{ form.submit(class_="btn btn-primary") }} to enter the main chat page</h5>
           </div>
         </form>
 
