--- a/main/templates/vision-dialog.chat.html
+++ b/main/templates/vision-dialog.chat.html
@@ -407,7 +407,7 @@
                              if (shape_layout_match(gt_layout, current_layout)) {
                                  // instructor's view on 2Dshape task
                                  document.getElementById("textInput").setAttribute("placeholder", "DONE - the drawing has completed by painter");
-                                 document.getElementById("textInput").disabled = true;
+                                 // document.getElementById("textInput").disabled = true;
                              }
                          });
                      });
