--- a/main/templates/end.html
+++ b/main/templates/end.html
@@ -30,7 +30,7 @@
             </div>
           {% elif code %}
              <span class="red-text">
-               <nav class="center-align">PLEASE COPY <b class='blue-text'>{{code}}</b>
+               <nav class="center-align">PLEASE COPY <b class='black-text'>{{code}}</b>
                to the task main page to get rewarded.</nav>
                   <!--We have sent the confirmation code to your dashboard via the Contribution ID you provided at Login page. Please copy the code to Crowdflower main task to get rewarded.-->
              </span>
